more refined states, model gen